# Improved_seam_carving

./: .gitignore  CMakeLists.txt  Improved_seam.cpp  Improved_seam.hpp  Video_seam.cpp  Video_seam.hpp  main.cpp
